tests/ui/parser/import-from-path.rs
// error-pattern:expected
use foo::{bar}::baz
